# Tipster

./: .gitignore  README.md  pyproject.toml
examples/: sample_game_features.csv  sample_games.csv  sample_upcoming.csv
src/elwf/: __init__.py  cli.py  settings.py
src/elwf/backtest/: walkforward.py
src/elwf/data/: fetch_euroleague.py  fetch_odds.py
src/elwf/features/: build_game_features.py
src/elwf/models/: train_game.py
