[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "el-walkforward"
version = "0.1.0"
description = "EuroLeague walk-forward modeling toolkit"
authors = [{name = "Tipster"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.2",
  "numpy>=1.26",
  "scikit-learn>=1.4",
  "requests>=2.31",
  "pydantic>=2.5",
  "pyarrow>=15.0",
  "tqdm>=4.66",
  "euroleague-api>=0.4.6",
  "xgboost>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4", "mypy>=1.10"]

[project.scripts]
elwf = "elwf.cli:main"
